<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="userModel"
            type="com.werpindia.internnigeria.viewModels.UserViewModel" />

        <variable
            name="loginListener"
            type="android.view.View.OnClickListener" />

        <variable
            name="createListener"
            type="android.view.View.OnClickListener" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary_gray"
        tools:context=".activities.UserLoginActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="5dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/sides_margin"
                android:layout_marginEnd="@dimen/sides_margin"
                android:textColorHint="@color/opaqueColor">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="?android:listPreferredItemHeight"
                    android:hint="@string/email"
                    android:inputType="text"
                    android:maxLines="1"
                    android:text="@={userModel.loginEmail}"
                    android:textColor="@color/colorAccent" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/sides_margin"
                android:layout_marginEnd="@dimen/sides_margin"
                android:textColorHint="@color/opaqueColor"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/opaqueColor">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="?android:listPreferredItemHeight"
                    android:layout_marginBottom="@dimen/element_margin"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:text="@={userModel.loginPassword}"
                    android:textColor="@color/colorAccent" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/forgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="@dimen/element_margin"
                android:background="@drawable/transparent_button"
                android:padding="10dp"
                android:text="@string/forgot_password"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent" />

            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/sides_margin"
                android:layout_marginEnd="@dimen/sides_margin"
                android:background="@drawable/button"
                android:onClick="@{loginListener}"
                android:text="@string/login"
                android:textColor="@color/colorAccent" />

            <Button
                android:id="@+id/signUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="@dimen/element_margin"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="@dimen/element_margin"
                android:background="@android:color/white"
                android:backgroundTint="@color/colorPrimaryDark_gray"
                android:onClick="@{createListener}"
                android:padding="5dp"
                android:text="@string/create_new_account"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </ScrollView>
</layout>
