<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="employerModel"
            type="com.werpindia.internnigeria.viewModels.CompanyViewModel" />

        <variable
            name="signUpListener"
            type="android.view.View.OnClickListener" />

        <variable
            name="loginListener"
            type="android.view.View.OnClickListener" />

        <variable
            name="signUpPhoneNumber"
            type="androidx.databinding.ObservableField&lt;String&gt;" />

        <variable
            name="layoutEnabled"
            type="androidx.databinding.ObservableBoolean" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary_gray">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp"
            tools:context=".loginAndSignup.ActivityForSignup">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/companyName_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/sides_margin"
                android:layout_marginEnd="@dimen/sides_margin"
                android:textColorHint="@color/opaqueColor">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signUpCompanyName"
                    android:layout_width="match_parent"
                    android:layout_height="?android:listPreferredItemHeight"
                    android:enabled="@{layoutEnabled}"
                    android:hint="@string/company_name"
                    android:inputType="text"
                    android:maxLines="1"
                    android:text="@={employerModel.signUpCompanyName}"
                    android:textColor="@color/colorAccent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/sides_margin"
                android:layout_marginEnd="@dimen/sides_margin"
                android:textColorHint="@color/opaqueColor">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signUpEmail"
                    android:layout_width="match_parent"
                    android:layout_height="?android:listPreferredItemHeight"
                    android:enabled="@{layoutEnabled}"
                    android:hint="@string/companyName"
                    android:inputType="text"
                    android:maxLines="1"
                    android:text="@={employerModel.signUpEmail}"
                    android:textColor="@color/colorAccent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/sides_margin"
                android:layout_marginEnd="@dimen/sides_margin"
                android:textColorHint="@color/opaqueColor"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signUpPassword"
                    android:layout_width="match_parent"
                    android:layout_height="?android:listPreferredItemHeight"
                    android:enabled="@{layoutEnabled}"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:text="@={employerModel.signUpPassword}"
                    android:textColor="@color/colorAccent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirm_password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/sides_margin"
                android:layout_marginEnd="@dimen/sides_margin"
                android:textColorHint="@color/opaqueColor"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signUpConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="?android:listPreferredItemHeight"
                    android:enabled="@{layoutEnabled}"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:text="@={employerModel.signUpConfirmPassword}"
                    android:textColor="@color/colorAccent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signUp_phone_number_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/sides_margin"
                android:layout_marginEnd="@dimen/sides_margin"
                android:textColorHint="@color/opaqueColor"
                app:hintEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signUpPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="?android:listPreferredItemHeight"
                    android:enabled="@{layoutEnabled}"
                    android:hint="@string/phone_number"
                    android:inputType="text"
                    android:maxLines="1"
                    android:text="@={signUpPhoneNumber}"
                    android:textColor="@color/colorAccent" />
            </com.google.android.material.textfield.TextInputLayout>

            <ProgressBar
                android:id="@+id/loginProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:visibility="@{layoutEnabled ? View.GONE : View.VISIBLE}" />

            <Button
                android:id="@+id/signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/sides_margin"
                android:layout_marginTop="@dimen/element_margin"
                android:layout_marginEnd="@dimen/sides_margin"
                android:background="@drawable/button"
                android:enabled="@{layoutEnabled}"
                android:onClick="@{signUpListener}"
                android:text="@string/signup"
                android:textColor="@color/colorAccent" />


            <Button
                android:id="@+id/signUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="@dimen/element_margin"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="@dimen/element_margin"
                android:background="@android:color/white"
                android:backgroundTint="@color/colorPrimaryDark_gray"
                android:enabled="@{layoutEnabled}"
                android:onClick="@{loginListener}"
                android:padding="5dp"
                android:text="@string/login"
                android:textColor="@android:color/white" />

        </LinearLayout>
    </ScrollView>
</layout>

    <!--<EditText--><!--android:id="@+id/password"--><!--android:layout_width="match_parent"--><!--android:layout_height="?android:listPreferredItemHeight"--><!--android:layout_marginStart="@dimen/sides_margin"--><!--android:layout_marginEnd="@dimen/sides_margin"--><!--android:layout_marginBottom="@dimen/element_margin"--><!--android:drawableStart="@drawable/key_light"--><!--android:drawablePadding="10dp"--><!--android:hint="Password"--><!--android:inputType="textPassword"--><!--android:maxLines="1"--><!--android:textColor="@color/colorAccent"--><!--android:textColorHint="@color/colorAccent"--><!--app:layout_constraintBottom_toTopOf="@+id/confirmPassword"--><!--app:layout_constraintEnd_toEndOf="parent"--><!--app:layout_constraintStart_toStartOf="parent"--><!--app:layout_constraintTop_toBottomOf="@+id/username" />-->

    <!--<EditText--><!--android:id="@+id/confirmPassword"--><!--android:layout_width="match_parent"--><!--android:layout_height="?android:listPreferredItemHeight"--><!--android:layout_marginStart="@dimen/sides_margin"--><!--android:layout_marginEnd="@dimen/sides_margin"--><!--android:layout_marginBottom="@dimen/element_margin"--><!--android:drawableStart="@drawable/key_light"--><!--android:drawablePadding="10dp"--><!--android:hint="Confirm Password"--><!--android:inputType="textPassword"--><!--android:maxLines="1"--><!--android:textColor="@color/colorAccent"--><!--android:textColorHint="@color/colorAccent"--><!--app:layout_constraintBottom_toTopOf="@+id/register"--><!--app:layout_constraintEnd_toEndOf="parent"--><!--app:layout_constraintStart_toStartOf="parent"--><!--app:layout_constraintTop_toBottomOf="@+id/password" />-->